Adding a project creation page

--- a/src/main/resources/locales/en-locale.yaml
+++ b/src/main/resources/locales/en-locale.yaml
@@ -46,3 +46,11 @@ main-frame:
       title: Recent Projects
     study:
       title: Recent Tasks
+  project-creation:
+    title: Project creation
+    name-field:
+      title: Project name
+    language-field:
+      title: Language
+    create-button:
+      text: Create
